// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetInfo renders as expected when not placeholder 1`] = `
<div>
  <div
    class="grid grid-cols-12"
  >
    <div
      class="col-span-6"
    >
      <div
        class="grid grid-cols-12 items-start"
      >
        <div
          class="col-span-4"
        >
          <div
            data-testid="TotalWidget"
          />
          <div
            data-testid="SpendWidget"
          />
          <div
            data-testid="EarnWidget"
          />
        </div>
        <div
          class="card col-span-8"
        >
          <div
            data-testid="AssetSankey"
          />
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-12 col-span-6"
    >
      <div
        class="card col-span-12"
      >
        <div
          data-testid="NetWorthHistogram"
        />
      </div>
      <div
        class="col-span-12"
      />
    </div>
  </div>
</div>
`;

exports[`AssetInfo renders as expected when placeholder 1`] = `
<div>
  <div
    class="grid grid-cols-12"
  >
    <div
      class="col-span-6"
    >
      <div
        class="grid grid-cols-12 items-start"
      >
        <div
          class="card col-span-6"
        >
          <div
            class="items-center"
          >
            <div
              data-testid="TotalsPie"
            />
            <div
              data-testid="MonthChange"
            />
            <div
              class="mt-4"
            >
              <div
                data-testid="AccountsTable"
              />
            </div>
          </div>
        </div>
        <div
          class="card col-span-6"
        />
      </div>
    </div>
    <div
      class="grid grid-cols-12 col-span-6"
    >
      <div
        class="card col-span-12"
      >
        <div
          data-testid="NetWorthHistogram"
        />
      </div>
      <div
        class="col-span-12"
      />
    </div>
  </div>
</div>
`;
